set up the connection string, only works on MY machine... need env or something

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "database": "Data Source=/Users/eggertsigtryggsson/Documents/Vefþjónustur/Large1_technical_radiation/database.db"
+  }
 }
+
