fixed Data connection string so it should work for us all

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "database": "Data Source=/Users/eggertsigtryggsson/Documents/Vefþjónustur/Large1_technical_radiation/database.db"
+    "database": "Data Source=database.db"
   }
 }
 
