--- a/TechnicalRadiation.WebApi/TechnicalRadiation.WebApi.csproj
+++ b/TechnicalRadiation.WebApi/TechnicalRadiation.WebApi.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="..\TechnicalRadiation.Models\TechnicalRadiation.Models.csproj"/>
+    <PackageReference Include="../TechnicalRadiation.Repositories/TechnicalRadiation.Repositories.csproj"/>
+    <PackageReference Include="..\TechnicalRadiation.Services\TechnicalRadiation.Services.csproj"/>
+  </ItemGroup> 
+ 
 </Project>
