--- a/TechnicalRadiation.WebApi/appsettings.json
+++ b/TechnicalRadiation.WebApi/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "database": "Data Source=database.db"
+    "NewsDbConnectionString": "Data Source=news.db"
   }
 }
 
