--- a/TechnicalRadiation.Repositories/TechnicalRadiation.Repositories.csproj
+++ b/TechnicalRadiation.Repositories/TechnicalRadiation.Repositories.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.10" />
+    
   </ItemGroup>
 
 </Project>
