Referenced all the layers together

--- a/TechnicalRadiation.Repositories/TechnicalRadiation.Repositories.csproj
+++ b/TechnicalRadiation.Repositories/TechnicalRadiation.Repositories.csproj
@@ -15,4 +15,8 @@
     
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TechnicalRadiation.Models\TechnicalRadiation.Models.csproj" />
+  </ItemGroup>
+
 </Project>
