--- a/TechnicalRadiation.Services/TechnicalRadiation.Services.csproj
+++ b/TechnicalRadiation.Services/TechnicalRadiation.Services.csproj
@@ -1,5 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\TechnicalRadiation.Models\TechnicalRadiation.Models.csproj" />
+    <ProjectReference Include="..\TechnicalRadiation.Repositories\TechnicalRadiation.Repositories.csproj" />
+  </ItemGroup>
+
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
