--- a/TechnicalRadiation.WebApi/TechnicalRadiation.WebApi.csproj
+++ b/TechnicalRadiation.WebApi/TechnicalRadiation.WebApi.csproj
@@ -12,9 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="..\TechnicalRadiation.Models\TechnicalRadiation.Models.csproj"/>
-    <PackageReference Include="..\TechnicalRadiation.Repositories\TechnicalRadiation.Repositories.csproj"/>
-    <PackageReference Include="..\TechnicalRadiation.Services\TechnicalRadiation.Services.csproj"/>
-  </ItemGroup> 
+    <ProjectReference Include="..\TechnicalRadiation.Models\TechnicalRadiation.Models.csproj" />
+    <ProjectReference Include="..\TechnicalRadiation.Services\TechnicalRadiation.Services.csproj" />
+  </ItemGroup>
  
 </Project>
