--- a/TechnicalRadiation.Models/TechnicalRadiation.Models.csproj
+++ b/TechnicalRadiation.Models/TechnicalRadiation.Models.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
+  </ItemGroup>
+
 
 </Project>
