--- a/TechnicalRadiation.Repositories/TechnicalRadiation.Repositories.csproj
+++ b/TechnicalRadiation.Repositories/TechnicalRadiation.Repositories.csproj
@@ -10,11 +10,15 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.0-msbuild3-final">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.10" />
     
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\TechnicalRadiation.Models\TechnicalRadiation.Models.csproj" />
   </ItemGroup>
